<resources>
    <string name="app_name">My Application</string>
    <string name="page_one">
This is an initiative by Volunteering Victoria to strengthen your volunteering.
</string>
    <string name="page_one_title">Volpoll</string>
    <string name="completed_gif_description">A GIF indicating task completion</string>
    <string name="completion_text_0">Well done!</string>
    <string name="completion_text_1">Your survey is complete</string>
    <string name="completion_text_2">Download Report</string>
    <string name="completion_text_3">Learn more about us</string>
    <string name="title_activity_main2">MainActivity2</string>

</resources>